[gd_scene load_steps=7 format=2]

[ext_resource path="res://Trees/Tree.gd" type="Script" id=1]
[ext_resource path="res://Trees/tree_sprite_sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 64 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 96 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 336.149

[node name="Tree" type="KinematicBody2D" index="0" groups=[
"trees",
]]

z_index = -1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="small_collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
disabled = true

[node name="small_sprite" type="Sprite" parent="small_collision" index="0"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 128, 64, 64 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="small_planted" type="Sprite" parent="small_collision" index="1"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 128, 64, 46 )
_sections_unfolded = [ "Region" ]

[node name="medium_collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
disabled = true

[node name="medium_sprite" type="Sprite" parent="medium_collision" index="0"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 64, 64, 128 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="medium_planted" type="Sprite" parent="medium_collision" index="1"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 64, 64, 110 )
_sections_unfolded = [ "Region" ]

[node name="large_collision" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 3 )
disabled = true

[node name="large_sprite" type="Sprite" parent="large_collision" index="0"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 0, 64, 192 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="large_planted" type="Sprite" parent="large_collision" index="1"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 128, 0, 64, 174 )
_sections_unfolded = [ "Region" ]

[node name="AgroArea" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroArea" index="0"]

shape = SubResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="walk_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="growth_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="change_from_idle" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="attack_timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="walk_timer" to="." method="_on_walk_timer_timeout"]

[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]

[connection signal="timeout" from="change_from_idle" to="." method="_on_change_from_idle_timeout"]

[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]


